# MusicPlayer

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  installer.nsi  installer_ansi.nsi  resources.rc
qml/: PlayerCard.qml  PlayerCardMini.qml  PlaylistPanel.qml  main.qml
qml/components/: RoundButton.qml  Visualizer.qml  VolumeSlider.qml
src/: CMakeLists.txt  main.cpp  playerbackend.cpp  playerbackend.h  playlistmodel.cpp  playlistmodel.h  resources.qrc
